# SpreadsheetRust

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  Trunk.toml  bigger.json  grid.json  image.json  index.html  mysheet.json  report.tex  tarpaulin-report.html  tester.json
.github/workflows/: ci.yml
spreadsheet-rust/rustlab/src/: main.rs  parser.rs
src/: backend.rs  common.rs  extension_main.rs  functions.rs  graph.rs  lib.rs  main  main.rs  mod.rs  parser.rs  parser_main.rs  review  spreadsheet  spreadsheet.rs  types.rs
src/backend/: backend.rs  functions.rs  graph.rs  mod.rs
src/extension/: common.rs  lib.rs
src/extension/backend/: backend.rs  functions.rs  graph.rs  mod.rs
src/extension/frontend/: terminal.rs  web.rs
src/extension/parser/: parser.rs
src/frontend/: mod.rs  terminal.rs  web.rs
src/parser/: mod.rs  parser.rs
src/terminal/: backend.rs  functions.rs  graph.rs  mod.rs  parser.rs  spreadsheet.rs  types.rs
static/: mysheet.json
tests/: backend.rs  backend_ext.rs  backend_terminal.rs  common_ext.rs  frontend.rs  frontend_ext.rs  functions_ext.rs  functions_terminal.rs  graph.rs  graph_ext.rs  graph_terminal.rs  parser_ext.rs  parser_terminal.rs  spreadsheet_terminal.rs  test.rs  types_terminal.rs
tests/extension/: backend.rs  mod.rs  parser.rs
tests/terminal/: backend.rs
