[package]
name = "spreadsheet_rust"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "spreadsheet"
path = "src/main.rs"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-chart = "0.6.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlSelectElement", "HtmlInputElement"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"