[package]
name = "spreadsheet_rust"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "spreadsheet"
path = "src/extension_main.rs"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-chart = "0.6.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlSelectElement", "HtmlInputElement"] }
gloo = "0.10"                          # For DOM utilities
gloo-net = "0.4"
wasm-bindgen-futures = "0.4.50"
plotters = "0.3"                      # Main charting library
plotters-canvas = "0.3"              # WebAssembly Canvas backend

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"